--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -35,6 +35,7 @@
   <script src='./js/panier.js' defer></script>
   <script src='./js/confirmation_comande.js'></script>
 
+
 </head>
 
 
@@ -66,7 +67,7 @@
               <th scope="col"></th>
               <th scope="col">Produit / Modèle</th>
               <th scope="col">Quantité</th>
-              <th scope="col">Prix par unité  / €</th>
+              <th scope="col">Prix par unité / €</th>
               <th scope="col">Prix sous-total / €</th>
               <th></th>
             </tr>
@@ -80,59 +81,67 @@
                 <td scope="col" id="qt"></td>
                 <td scope="col" id="priceProduit"></td>
                 <td scope="col" id="sous_total"></td>
-                <td scope="col"><div><input id="button_delete" type="button" value="Supprimer l'article"></td>
+                <td scope="col">
+                  <div><input id="button_delete" type="button" value="Supprimer l'article">
+                </td>
               </tr>
             </template>
           </tbody>
           <tfoot>
             <tr class="table-striped">
               <td class="h5" id="totalLabel" colspan="5">Total : </td>
-              <td class="h5 text-danger" id="total" colspan="2"></td>
+              <td class="h5 text-dark" id="total" colspan="2"></td>
             </tr>
           </tfoot>
         </table>
       </div>
 
-      <div class="formulaire shadow-none p-3 mb-5 bg-light rounded">
-        <p class="h5 text-primary text-start">Veuillez completez le formulaire avec l'adresse pour receptionne de votre commande :</p>
+      <div class="formulaire shadow-none p-3 bg-light rounded">
+        <p class="h5 text-primary text-start">Veuillez compléter le formulaire avec l'adresse pour réceptionner votre
+          commande :</p>
 
-      <form class="row g-3" onsubmit="registerOrder()">
-        <div class="col-md-4">
-          <label for="validationCustom01" class="h6 form-label" aria-describedby="nomHelp">Nom</label>
-          <div id="nomHelp" class="form-text">Les noms doivent contenir 4 à 20 caractères.</div>
-          <input type="text" maxlength="20" class="form-control" id="validationCustom01" required pattern="[A-Za-z]{4}" title="4 à 20 lettres">
-          <span class="validity"></span>
-        </div>
-        <div class="col-md-4">
-          <label for="validationCustom02" class="h6 form-label" aria-describedby="prenomHelp">Prenom</label>
-          <div id="prenomHelp" class="form-text">Les prenoms doivent contenir 2 à 20 caractères.</div>
-          <input type="text"  maxlength="20" class="form-control" id="validationCustom02" required pattern="[A-Za-z]{2}" title="2 à 20 lettres">
-        </div>
-        <div class="col-md-4">
-          <label for="validationCustomUsername03" class="h6 form-label" aria-describedby="emailHelp">Email</label>
-          <div id="emailHelp" maxlength="20"class="form-text">Veuillez entrer une adresse e-mail valide. </div>
-          <div class="input-group has-validation">
-            <span class="input-group-text" id="inputGroupPrepend">@</span>
-            <input type="text" class="form-control" id="validationCustomUsername03" aria-describedby="inputGroupPrepend"  placeholder="example@example.com"
-              required pattern=".+@tutsplus\.com|.+@envato\.com">
+        <form class="row g-3" onsubmit="registerOrder()">
+          <div class="col-md-4">
+            <label for="validationCustom01" class="h6 form-label" aria-describedby="nomHelp">Nom</label>
+            <div id="nomHelp" class="form-text">Les noms doivent contenir 4 à 20 caractères.</div>
+            <input type="text" maxlength="20" class="form-control" id="validationCustom01" required
+              pattern="[A-Za-z]{4,}" title="4 à 20 lettres">
+            <span class="validity"></span>
           </div>
-        </div>
-        <div class="col-md-4">
-          <label for="validationCustom04" class="h6 form-label" aria-describedby="adresseHelp">Adresse</label>
-          <div id="adresseHelp" class="form-text">Veuillez entrer une adresse e-mail valide.</div>
-          <input type="text" maxlength="20" class="form-control" id="validationCustom04"  placeholder="123 rue Paris" required>
-        </div>
-        <div class="col-md-3">
-          <label for="validationCustom0" class="h6 form-label" aria-describedby="villeHelp">Ville</label>
-          <div id="villeHelp" class="form-text">Veuillez entrer une ville valide. </div>
-          <input type="text" maxlength="20" class="form-control" id="validationCustom05" required>
-        </div>
-  
-        <div class="col-12 d-grid gap-2 d-md-flex justify-content-md-end">
-          <button class="btn btn-primary" type="submit">Passer la commande</button>
-        </div>
-      </form>
-    </div>
+          <div class="col-md-4">
+            <label for="validationCustom02" class="h6 form-label" aria-describedby="prenomHelp">Prénom</label>
+            <div id="prenomHelp" class="form-text">Les prénoms doivent contenir 2 à 20 caractères.</div>
+            <input type="text" maxlength="20" class="form-control" id="validationCustom02" required
+              pattern="[A-Za-z]{2,}" title="2 à 20 lettres">
+          </div>
+          <div class="col-md-4">
+            <label for="validationCustomUsername03" class="h6 form-label" aria-describedby="emailHelp">Email</label>
+            <div id="emailHelp" class="form-text">Veuillez entrer une adresse e-mail valide. </div>
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="inputGroupPrepend">@</span>
+              <input type="text" maxlength="20" class="form-control" id="validationCustomUsername03"
+                aria-describedby="inputGroupPrepend" placeholder="example@example.com" required
+                pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[a-z]{2,}">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <label for="validationCustom04" class="h6 form-label" aria-describedby="adresseHelp">Adresse</label>
+            <div id="adresseHelp" class="form-text">Veuillez entrer une adresse valide.</div>
+            <input type="text" maxlength="20" class="form-control" id="validationCustom04" placeholder="123 rue Paris"
+              required pattern="[A-Za-z0-9\s]{7,}" title="7 à 20 caractères">
+          </div>
+          <div class="col-md-3">
+            <label for="validationCustom0" class="h6 form-label" aria-describedby="villeHelp">Ville</label>
+            <div id="villeHelp" class="form-text">Veuillez entrer une ville valide. </div>
+            <input type="text" maxlength="20" class="form-control" id="validationCustom05" required
+              pattern="[A-Za-z0-9\s]{3,}" title="3 à 20 caractères">
+          </div>
+
+          <div class="col-12 d-grid gap-2 d-md-flex justify-content-md-end">
+            <button class="btn btn-primary" type="submit">Passer la commande</button>
+          </div>
+        </form>
+      </div>
     </main>
 
 
