--- a/frontend/remerciment.html
+++ b/frontend/remerciment.html
@@ -47,7 +47,7 @@
             <div class="shadow-none p-3 bg-light rounded">
                 <p class="h5">Votre numéro de commande : <span scope="col" id="orderId" class="h4 text-primary"></span>
                 </p>
-                <p class="h5 mb-5">Avec un total de : <span scope="col" id="totalMerci" class="h4 text-primary"></span>
+                <p class="h5 mb-5">Avec un montant total de : <span scope="col" id="totalMerci" class="h4 text-primary"></span>
                 </p>
                 <p class="mt-5 h1 text-center text-dark">Merci pour votre visite, à bientôt!</p>
             </div>
