--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -55,7 +55,7 @@
     </header>
 
     <main class="content">
-      <p id="message" style="display: none;">Votre panier est vide !</p>
+      <p class="h1 text-center" id="message" style="display: none;">Votre panier est vide !</p>
       <div id="wrapper_items">
         <p class="h2 text-primary text-start">Voici votre panier : </p>
         <table class="table-bordered table table-light table-striped">
